2011-06-27  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        Move apache_http_server.py to webkitpy.layout_package.servers
        https://bugs.webkit.org/show_bug.cgi?id=63433

        The apache_http_server.py is a server, not a port.

        * Scripts/webkitpy/layout_tests/port/apache_http_server.py: Removed.
        * Scripts/webkitpy/layout_tests/port/base.py:
        * Scripts/webkitpy/layout_tests/servers: Added.
        * Scripts/webkitpy/layout_tests/servers/__init__.py: Added.
        * Scripts/webkitpy/layout_tests/servers/apache_http_server.py: Copied from Tools/Scripts/webkitpy/layout_tests/port/apache_http_server.py.

2011-06-27  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        Move rebaseline-chromium-webkit-tests.py to webkitpy.to_be_moved
        https://bugs.webkit.org/show_bug.cgi?id=63432

        This code isn't in the dependency cone of new-run-webkit-tests. It's
        unclear what it's final home should be, but this patch moves it out of
        layout_tests to simply the package.

        * Scripts/rebaseline-chromium-webkit-tests:
        * Scripts/webkitpy/layout_tests/rebaseline_chromium_webkit_tests.py: Removed.
        * Scripts/webkitpy/layout_tests/rebaseline_chromium_webkit_tests_unittest.py: Removed.
        * Scripts/webkitpy/to_be_moved/rebaseline_chromium_webkit_tests.py: Copied from Tools/Scripts/webkitpy/layout_tests/rebaseline_chromium_webkit_tests.py.
        * Scripts/webkitpy/to_be_moved/rebaseline_chromium_webkit_tests_unittest.py: Copied from Tools/Scripts/webkitpy/layout_tests/rebaseline_chromium_webkit_tests_unittest.py.

2011-06-27  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        Move update_webgl_conformance_tests.py to webkitpy.to_be_moved
        https://bugs.webkit.org/show_bug.cgi?id=63429

        This package as nothing to do with the layout_tests package.

        * Scripts/update-webgl-conformance-tests: