@@ -1,3 +1,13 @@
+2011-06-27  Eric Seidel  <eric@webkit.org>
+
+        Reviewed by Adam Barth.
+
+        Remove Chromium and ChromiumMac implementations of driver_name now that everything uses DumpRenderTree
+        https://bugs.webkit.org/show_bug.cgi?id=63428
+
+        * Scripts/webkitpy/layout_tests/port/chromium.py:
+        * Scripts/webkitpy/layout_tests/port/chromium_mac.py:
+
 2011-06-27  Adam Barth  <abarth@webkit.org>
 
         Reviewed by Eric Seidel.
